--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "drupal/memcache": "^2.0@alpha",
         "drupal/sendgrid_integration": "^1.1",
         "drupal/mailsystem": "^4.1",
-        "drupal/smtp": "^1.0@beta"
+        "drupal/smtp": "^1.0@beta",
+        "drupal/copyright_block": "^1.0@RC"
     },
     "replace": {
         "drupal/core": "^8.4"
