--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "drupal/sendgrid_integration": "^1.1",
         "drupal/mailsystem": "^4.1",
         "drupal/smtp": "^1.0@beta",
-        "drupal/copyright_block": "^1.0@RC"
+        "drupal/copyright_block": "^1.0@RC",
+        "drupal/core": "^8.4"
     },
     "replace": {
         "drupal/core": "^8.4"
