Updates EU cookie compliance to allow consent withdrawl.

--- a/modules/contrib/eu_cookie_compliance/config/install/eu_cookie_compliance.settings.yml
+++ b/modules/contrib/eu_cookie_compliance/config/install/eu_cookie_compliance.settings.yml
@@ -48,3 +48,9 @@ disagree_button_label: 'No, thanks'
 disabled_javascripts: ''
 whitelisted_cookies: ''
 consent_storage_method: 'do_not_store'
+withdraw_message:
+  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>You have given your consent for us to set cookies.</p>'
+  format: 'restricted_html'
+withdraw_action_button_label: 'Withdraw consent'
+withdraw_tab_button_label: 'Privacy settings'
+withdraw_enabled: true
