--- a/modules/contrib/eu_cookie_compliance/eu_cookie_compliance.info.yml
+++ b/modules/contrib/eu_cookie_compliance/eu_cookie_compliance.info.yml
@@ -2,7 +2,13 @@ name: 'EU Cookie Compliance'
 type: module
 description: 'This module aims at making the website compliant with the new EU cookie regulation'
 package: User interface
-core: 8.x
+# core: 8.x
 configure: eu_cookie_compliance.settings
 dependencies:
   - filter
+
+# Information added by Drupal.org packaging script on 2018-05-21
+version: '8.x-1.0+21-dev'
+core: '8.x'
+project: 'eu_cookie_compliance'
+datestamp: 1526932085
